--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.2.10
 dj-database-url==0.5.0
 dj-static==0.0.6
 Django==3.0.8
+django-cors-headers==3.5.0
 django-filter==2.4.0
 djangorestframework==3.12.1
 importlib-metadata==2.0.0
@@ -11,5 +12,3 @@ pytz==2020.1
 sqlparse==0.4.1
 static3==0.7.0
 zipp==3.3.0
-gunicorn
-psycopg2
