--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -15,6 +15,7 @@ idna==2.10
 importlib-metadata==2.0.0
 Markdown==3.3.1
 oauthlib==3.1.0
+psycopg2==2.8.6
 pycparser==2.20
 PyJWT==1.7.1
 python-decouple==3.3
